<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activityOneLayout"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="mik.activitylab.ActivityOne">

    <TextView
        android:id="@+id/onCreateTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/onCreateTextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/onStartTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/onStartTextView" />

    <TextView
        android:id="@+id/onResumeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/onResumeTextView" />

    <TextView
        android:id="@+id/onRestartTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/onRestartTextView" />

    <Button
        android:id="@+id/startActivityTwoBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/startActivityTwoBtn" />

</LinearLayout>
